@@ -19,6 +19,10 @@ ___________________________________
 
 ChangeLog about GNU GLOBAL
 
+***** ** ****, Shigio Yamaguchi  <shigio@gnu.org>
+
+	* gctags.c: allows second argument in *ENTRY for 4.3BSD.
+
 March 30 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
 	* conf.c: added GPATH,GTAGS,GRTAGS,GSYMS,tags,TAGS,ID to DEFAULTSKIP.
